Update Neural Network Tutorial using Keras.ipynb

--- a/tutorials/Neural Network Tutorial using Keras.ipynb
+++ b/tutorials/Neural Network Tutorial using Keras.ipynb
@@ -24,7 +24,7 @@
     "##### Input: features about the women.\n",
     "##### Output: has abreast cancer or not.\n",
     "\n",
-    "## __Prerequsite:__\n",
+    "## __Prerequisite:__\n",
     "#### Basic Understanding of Neural Network.\n",
     "\n",
     "\n",
