Update Neural Network Tutorial using Keras.ipynb

--- a/tutorials/Neural Network Tutorial using Keras.ipynb
+++ b/tutorials/Neural Network Tutorial using Keras.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "\n",
     "#### __Note:__\n",
-    "##### Our Network will have 1 hidden layer and an output layer, of course you can change this setting to add whatever you want from layers and hidden units. \n",
+    "##### 1/ I'm using python 3. \n",
+    "\n",
+    "##### 2/ Our Network will have 1 hidden layer and an output layer, of course you can change this setting to add whatever you want from layers and hidden units. \n",
     "\n",
     "##### __let's Begin!!__\n",
     "<br><br><br>"
@@ -98,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 input_dim: Adding the layers\n",
+    "### 1.1 Adding the layers\n",
     "__ units : Number of units__ <br>\n",
     "__activation : Type of activation fuction__<br>\n",
     "__ input_dim: Number of input features__<br>"
@@ -330,8 +332,9 @@
    ],
    "source": [
     "\n",
-    "print(\"Number of examples: \",x_train.shape)\n",
-    "print(\"Number of labels: \", y_train.shape)\n",
+    "print(\"Number of  training examples: \",x_train.shape[0])\n",
+     "print(\"Number of features: \",x_train.shape[1])\n",
+    "print(\"Number of training labels: \", y_train.shape[0])\n",
     "print(\"Weights of first layer :  \",model.weights[0])\n",
     "print(\"Biases first layer :  \",model.weights[1])\n",
     "print(\"Weights of second layer :  \",model.weights[2])\n",
