Update Neural Network Tutorial using Keras.ipynb

--- a/tutorials/Neural Network Tutorial using Keras.ipynb
+++ b/tutorials/Neural Network Tutorial using Keras.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "\n",
     "## __Objective: __\n",
-    "#### __In this tutorial__ we'll try yo predict if a woman has a breast cancer or not using feedforward neural network.\n",
+    "#### __In this tutorial__ we'll try to predict if a woman has a breast cancer or not using feedforward neural network.\n",
     "\n",
     "##### Input: features about the women.\n",
     "##### Output: has abreast cancer or not.\n",
