Update Neural Network Tutorial using Keras.ipynb

--- a/tutorials/Neural Network Tutorial using Keras.ipynb
+++ b/tutorials/Neural Network Tutorial using Keras.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "#### 2/ Our Network will have 1 hidden layer and an output layer, of course you can change this setting to add whatever you want from layers and hidden units. \n",
     "\n",
-    "#### 3/ you should have: Numpy , matplotlib, tensorflow  installed in your computer.\n",
+    "#### 3/ you should have: Numpy , matplotlib, sklearn and tensorflow libraries installed in your computer.\n",
     "\n",
     "##### __let's Begin!!__\n",
     "<br><br><br>"
