Update Neural Network Tutorial using Keras.ipynb

--- a/tutorials/Neural Network Tutorial using Keras.ipynb
+++ b/tutorials/Neural Network Tutorial using Keras.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "#### 2/ Our Network will have 1 hidden layer and an output layer, of course you can change this setting to add whatever you want from layers and hidden units. \n",
     "\n",
-    "#### 3/ you should have: Numpy , matplotlib, sklearn and tensorflow libraries installed in your computer.\n",
+    "#### 3/ you should have: Numpy , matplotlib,sklearn and tensorflow  installed in your computer.\n",
     "\n",
     "##### __let's Begin!!__\n",
     "<br><br><br>"
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; __Image by__ [Lucas Rodés-Guirao](https://www.kaggle.com/luikna/eda-and-tensorflow-implementation)"
+    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; __Image by__ [Lucas Rodés-Guirao](https://www.kaggle.com/luikna/eda-and-tensorflow-implementation)"
    ]
   },
   {
@@ -423,6 +423,19 @@
     "print (\"Final loss or the output of the cost function: \",loss_and_metrics[0])\n",
     "accuracy=loss_and_metrics[1]\n",
     "print(\"Model Accuracy: \",accuracy*100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<br><br><br>\n",
+    "> # Close Note:\n",
+    ">#### __In the end, yeah, I know that was a horrible accuracy, if you have a project and see an accuracy like this, just know that you've had a bad day, so this example just for educational purposes, feel free to play with the parameters and try to optimize it !!__\n",
+    "\n",
+    "\n",
+    "<br><br><br>"
    ]
   },
   {
